apps/production/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3008
    name: http
    protocol: TCP
    targetPort: 3008
  selector:
    app: n8n
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
