apps/production/n8n/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: local-siemons-it-nl
    name: n8n-ingress
    namespace: n8n
  spec:
    ingressClassName: traefik
    rules:
    - host: n8n.local.siemons-it.nl
      http:
        paths:
        - backend:
            service:
              name: n8n
              port:
                number: 3008
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - n8n.local.siemons-it.nl
      secretName: local-siemons-it-nl-tls
  status:
    loadBalancer: {}
kind: List
